--- a/Machine Learning Intern Role/cancer_mortality_rate.ipynb
+++ b/Machine Learning Intern Role/cancer_mortality_rate.ipynb
@@ -2165,7 +2165,12 @@
     "<a name=\"SelectTrainModel\"> </a>\n",
     "# 7. Select and Train a Model\n",
     "\n",
-    "Usually it is worth it to try various models and compare their performance."
+    "Usually it is worth it to try various models and compare their performance. I chose to experiment with:\n",
+    "1. **Linear Regression**: simple and effective model with linear data and regression problems.\n",
+    "2. **Decision Tree**: usually used for classification tasks, but can be effective as regressors as well. Due to their high-interpretability even from non-technical audiences, it is almost always worth a try!\n",
+    "3. **Random Forest**: in case Decision Tree performs reasonably well, most probably a RF will perform even better!\n",
+    "\n",
+    "I would also experiment with SVM and MLP, but since this is an exercice to demonstrate the basic ML workflow, I believe 3 models are a good choice."
    ]
   },
   {
@@ -2725,8 +2730,9 @@
     "\n",
     "\n",
     "2. To improve futher our scores, we could try:  \n",
+    "    * apply a **dimensionality reduction** algorithm such as LDA.\n",
     "    * **more hyperparameter combinations** with GridSearchCV on the same model (RF).\n",
-    "    * more models such as **Support Vector Machine**, **Multilayer Percepton**, etc.\n",
+    "    * more models such as **Support Vector Machine**, **Multi-Layer Percepton**, etc.\n",
     "    * **removing *binnedInc* feature** that has low linear relationship with the target variable which was revealed by the *feature_importance_* method.  \n",
     "    \n",
     "    \n",
